--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
   <main>
-    <p id="score-counter">Score: 0</p>
+    <p id="score">0</p>
     <p id="timer">3.00</p>
     <p id="prompt">type enter</p>
-    <p id="word">press enter to begin</p>
+    <p id="typedWord">press enter to begin</p>
   </main>
 </body>
 
