main part of game working

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <main>
     <p id="score">0</p>
     <p id="timer">10.00</p>
+    <p id="problem"></p>
     <p id="prompt">select the input field below, then press enter to begin</p>
-    <input type="text" id="wordInput" placeholder="type words here" onkeydown="if(event.key === 'Enter') { checkWord(); }"></input>    </form>
+    <input type="text" id="wordInput" placeholder="type words here" onkeydown="if(event.key === 'Enter') { checkWord(); }" autocomplete="off"></input>    </form>
+    <p id="gameOverText"></p>
   </main>
 </body>
 
