--- a/index.html
+++ b/index.html
@@ -12,12 +12,29 @@
 
 <body>
   <main>
-    <p id="score">0</p>
-    <p id="timer">10.00</p>
-    <p id="problem" style="opacity: 0;">Problem will appear here</p>
-    <p id="prompt">prompt will appear here. You must type a word that includes the prompt</p>
-    <input type="text" id="wordInput" placeholder="type words here" maxlength="0" onkeydown="if(event.key === 'Enter') { checkWord(); }" autocomplete="off"></input>    </form>
-    <p id="gameOverText">Select the input field, then press Enter to begin</p>
+    <p id="highScore">High Score: 0</p>
+    <div id="PregameContainer" style="display: block;">
+      <h1>Word Game</h1>
+      <br>
+      <button id="howToPlayButton" onclick="toggleHowToPlay()">How to Play</button>
+      <br>
+      <button id="startButton" onclick="startGameButton()">Start</button>
+    </div>
+    <div id="howToPlayContainer" style="display: none;">
+      <h2>How to Play</h2>
+      <p>When the game starts, a prompt will appear. You must type a word that includes the prompt. For example, if the prompt is "cat", you could type "<b>cat</b>", "<b>cat</b>erpillar", or "appli<b>cat</b>ion".</p>
+      <p>Press Enter to submit your word. If the word is valid, you will earn points based on the length of the word, the timer will reset, and the prompt will change. If the word is invalid, you will lose a point.</p>
+      <p>You have limited time to type each word, sarting from 10 seconds and slowly reducing. If you run out of time, the game will end.</p>
+      <button id="closeHowToPlayButton" onclick="toggleHowToPlay()">Close</button>
+    </div>
+    <div id="gameContainer" style="display: none;">
+      <p id="score">0</p>
+      <p id="timer">10.00</p>
+      <p id="problem" style="opacity: 0;">Problem will appear here</p>
+      <p id="prompt">prompt will appear here. You must type a word that includes the prompt</p>
+      <input type="text" id="wordInput" placeholder="type words here" maxlength="0" onkeydown="if(event.key === 'Enter') { checkWord(); }" autocomplete="off"></input>    </form>
+      <p id="gameOverText">Select the input field, then press Enter to begin</p>
+      </div>
   </main>
 </body>
 
