updated style and some functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Word Game</h1>
       <br>
       <button id="howToPlayButton" onclick="toggleHowToPlay()">How to Play</button>
-      <br>
+      <br><br>
       <button id="startButton" onclick="startGameButton()">Start</button>
     </div>
     <div id="howToPlayContainer" style="display: none;">
@@ -29,11 +29,14 @@
     </div>
     <div id="gameContainer" style="display: none;">
       <p id="score">0</p>
+      <br>
       <p id="timer">10.00</p>
-      <p id="problem" style="opacity: 0;">Problem will appear here</p>
+      <br>
       <p id="prompt">prompt will appear here. You must type a word that includes the prompt</p>
-      <input type="text" id="wordInput" placeholder="type words here" maxlength="0" onkeydown="if(event.key === 'Enter') { checkWord(); }" autocomplete="off"></input>    </form>
-      <p id="gameOverText">Select the input field, then press Enter to begin</p>
+      <p id="problem" style="opacity: 0;">-</p>
+      <input type="text" id="wordInput" placeholder="type words here" maxlength="0" onkeydown="if(event.key === 'Enter') { checkWord(); }" autocomplete="off"></input>
+      <br><br>
+      <p id="gameOverText"></p>
       </div>
   </main>
 </body>
