--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
   <main>
-    <p id="highScore">High Score: 0</p>
     <div id="PregameContainer" style="display: block;">
       <h1>Word Game</h1>
       <br>
@@ -33,7 +32,7 @@
       <p id="timer">10.00</p>
       <br>
       <p id="prompt">prompt will appear here. You must type a word that includes the prompt</p>
-      <p id="problem" style="opacity: 0;">-</p>
+      <p id="problem" style="opacity: 0;">Out of Time!</p>
       <input type="text" id="wordInput" placeholder="type words here" maxlength="0" onkeydown="if(event.key === 'Enter') { checkWord(); }" autocomplete="off"></input>
       <br><br>
       <p id="gameOverText"></p>
