--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     <div id="gameContainer" style="display: none;">
       <p id="score">0</p>
       <br>
-      <p id="timer">10.00</p>
+      <div id="timer">
+        <canvas id="timerCanvas" width="100" height="100"></canvas>
+        <p id="timerText">10.00</p>
+      </div>
       <br>
       <p id="prompt">prompt will appear here. You must type a word that includes the prompt</p>
       <p id="problem" style="opacity: 0;">Out of Time!</p>
