updated rules text and readme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="howToPlayContainer" style="display: none;">
       <h2>How to Play</h2>
       <p>When the game starts, a prompt will appear. You must type a word that includes the prompt. For example, if the prompt is "cat", you could type "<b>cat</b>", "<b>cat</b>erpillar", or "appli<b>cat</b>ion".</p>
-      <p>Press Enter to submit your word. If the word is valid, you will earn points based on the length of the word, the timer will reset, and the prompt will change. If the word is invalid, you will lose a point.</p>
+      <p>Press Enter to submit your word. If the word is valid, you will earn points based on the length of the word, the timer will reset, and the prompt will change. If the word is invalid, the timer will not reset and you will have to quickly type a valid word.</p>
       <p>You have limited time to type each word, sarting from 10 seconds and slowly reducing. If you run out of time, the game will end.</p>
       <button id="closeHowToPlayButton" onclick="toggleHowToPlay()">Close</button>
     </div>
