updated style and timer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>How to Play</h2>
       <table id="howToPlayTable">
         <tr>
-          <th> <h2>1</h2> Type a word that includes the given prompt. For example, if the prompt is "cat", you could type "<u>cat</u>", "<u>cat</u>erpillar", or "appli<u>cat</u>ion".</th>
+          <th> <h2>1</h2> Type a word that includes the given prompt.<br>For example, if the prompt is "cat", you could type "<u>cat</u>", "<u>cat</u>erpillar", or "appli<u>cat</u>ion".</th>
           <th> <h2>2</h2> Press Enter to submit. Valid words earn points and reset the timer. Invalid words will not reset the timer.</th>
         </tr>
         <tr>
