updated readme and rules

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <th> <h2>2</h2> Press Enter to submit. Valid words earn points and reset the timer. Invalid words will not reset the timer.</th>
         </tr>
         <tr>
-          <th> <h2>3</h2> The timer starts at 10 seconds and decreases over time. If you run out of time, the game ends.</th>
+          <th> <h2>3</h2> The timer starts at 10 seconds and decreases as the game continues. If you run out of time, the game ends.</th>
           <th> <h2>4</h2> Score as many points as you can by typing valid words before the timer runs out. Good luck!</th>
         </tr>
       </table>
